--- a/.hound.yml
+++ b/.hound.yml
@@ -1,3 +1,4 @@
-ruby:
-  config_file: .ruby-style.yml
-  enabled: true
+LineLength:
+  Description: 'Limit lines to 90 characters.'
+  Enabled: true
+  Max: 90
